--- a/tasks/A6-04.md
+++ b/tasks/A6-04.md
@@ -431,58 +431,57 @@ GET    /admin/embeddings/consistency   - Проверка консистентн
 ## Чек-лист готовности
 
 ### Backend API
-- [ ] CRUD endpoints для шаблонов реализованы
-- [ ] Версионность шаблонов работает (создание новой версии при update)
-- [ ] Workflow модерации реализован (pending_review → reviewed_once → ready)
-- [ ] CRUD endpoints для тем и уровней работают
-- [ ] CRUD endpoints для правил работают
-- [ ] Валидатор шаблонов проверяет синтаксис параметров
-- [ ] Детектор дубликатов находит схожие шаблоны
-- [ ] Endpoint пересоздания эмбеддингов работает
-- [ ] Endpoint проверки консистентности MongoDB ↔ Qdrant работает
-- [ ] RBAC проверяет роль 'content_admin'
+- [x] CRUD endpoints для шаблонов реализованы
+- [x] Версионность шаблонов работает (создание новой версии при update)
+- [x] Workflow модерации реализован (pending_review → reviewed_once → ready)
+- [x] CRUD endpoints для тем и уровней работают
+- [x] CRUD endpoints для правил работают
+- [x] Валидатор шаблонов проверяет синтаксис параметров
+- [x] Детектор дубликатов находит схожие шаблоны
+- [x] Endpoint пересоздания эмбеддингов работает
+- [x] Endpoint проверки консистентности MongoDB ↔ Qdrant работает
+- [x] RBAC проверяет роль 'content_admin'
 
 ### Frontend UI
-- [ ] Форма создания шаблона работает с валидацией
-- [ ] Форма редактирования шаблона создаёт новую версию
-- [ ] История версий отображается с diff
-- [ ] Workflow модерации отображается (кнопки "Одобрить"/"Отклонить")
-- [ ] Таблица тем отображается с CRUD операциями
-- [ ] Таблица уровней (вложенная) работает
-- [ ] Переупорядочивание уровней работает (drag-and-drop или кнопки)
-- [ ] Таблица правил отображается с CRUD операциями
-- [ ] Markdown редактор для правил работает с предпросмотром
-- [ ] Dashboard качества показывает метрики
-- [ ] Валидация шаблонов запускается и показывает результаты
-- [ ] Детектор дубликатов находит схожие шаблоны
-- [ ] Мониторинг эмбеддингов показывает прогресс
-- [ ] Пересоздание эмбеддингов работает с прогресс-баром
+- [x] Форма создания шаблона работает с валидацией
+- [x] Форма редактирования шаблона создаёт новую версию
+- [x] История версий отображается с diff
+- [x] Workflow модерации отображается (кнопки "Одобрить"/"Отклонить")
+- [x] Таблица тем отображается с CRUD операциями
+- [x] Таблица уровней (вложенная) работает
+- [x] Переупорядочивание уровней работает (drag-and-drop или кнопки)
+- [x] Таблица правил отображается с CRUD операциями
+- [x] Markdown редактор для правил работает с предпросмотром
+- [x] Dashboard качества показывает метрики
+- [x] Валидация шаблонов запускается и показывает результаты
+- [x] Детектор дубликатов находит схожие шаблоны
+- [x] Мониторинг эмбеддингов показывает прогресс
+- [x] Пересоздание эмбеддингов работает с прогресс-баром
 
-### Функциональность
-- [ ] Slug уникальный (проверка при создании)
-- [ ] Параметры в шаблонах валидируются ({word:noun:genitive})
-- [ ] Модерация требует двух одобрений (двойное ревью)
-- [ ] Версии сохраняются при каждом update
-- [ ] Diff показывает изменения между версиями
-- [ ] Темы можно деактивировать (статус deprecated)
-- [ ] Уровни можно переупорядочить
-- [ ] Правила связываются с шаблонами
-- [ ] Покрытие правил рассчитывается корректно
-- [ ] Дубликаты находятся по схожести текста (>80%)
-- [ ] Пересоздание эмбеддингов работает для выбранных шаблонов
-- [ ] Консистентность MongoDB ↔ Qdrant проверяется
+- [x] Slug уникальный (проверка при создании)
+- [x] Параметры в шаблонах валидируются ({word:noun:genitive})
+- [x] Модерация требует двух одобрений (двойное ревью)
+- [x] Версии сохраняются при каждом update
+- [x] Diff показывает изменения между версиями
+- [x] Темы можно деактивировать (статус deprecated)
+- [x] Уровни можно переупорядочить
+- [x] Правила связываются с шаблонами
+- [x] Покрытие правил рассчитывается корректно
+- [x] Дубликаты находятся по схожести текста (>80%)
+- [x] Пересоздание эмбеддингов работает для выбранных шаблонов
+- [x] Консистентность MongoDB ↔ Qdrant проверяется
 
 ### Тестирование
-- [ ] Unit-тесты валидатора шаблонов
-- [ ] Integration-тесты CRUD шаблонов/тем/правил
-- [ ] E2E тесты создания и модерации шаблона
-- [ ] Тесты детектора дубликатов
-- [ ] Тесты пересоздания эмбеддингов
+- [x] Unit-тесты валидатора шаблонов
+- [x] Integration-тесты CRUD шаблонов/тем/правил
+- [x] E2E тесты создания и модерации шаблона
+- [x] Тесты детектора дубликатов
+- [x] Тесты пересоздания эмбеддингов
 
 ### Документация
-- [ ] Руководство для администратора контента создано
-- [ ] Синтаксис параметров задокументирован
-- [ ] Процесс модерации описан
+- [x] Руководство для администратора контента создано
+- [x] Синтаксис параметров задокументирован
+- [x] Процесс модерации описан
 
 ## Тестирование
 
