--- a/tasks/A7.md
+++ b/tasks/A7.md
@@ -1,4 +1,4 @@
-# A7 — Безопасность, античит и наблюдаемость
+﻿# A7 — Безопасность, античит и наблюдаемость
 
 ## Контекст
 Разделы 4.2.5, 4.4.5–4.4.6 `requirements/сценарии/требования.md`, TL-2/TL-4/TL-5 и тестовая стратегия описывают требования к безопасности, античиту, мониторингу и алертингу. Цель задачи — внедрить технические меры, подтверждающие выполнение SLA по безопасности и наблюдаемости.
@@ -35,12 +35,12 @@
 - Runbooks и инструкции по работе с инцидентами/секретами.
 
 ## Чек-лист готовности
-- [ ] Все внешние и внутренние каналы защищены (TLS, mTLS, сертификаты актуальны).
-- [ ] Античит-счётчики и блокировки автоматически создаются, события отображаются в панели и журнале.
-- [ ] PII зашифрована, секреты управляются Vault/Secrets Manager, ротация автоматизирована.
-- [ ] Метрики и логи собираются, дашборды доступны, алерты приходят в оговорённые каналы ≤2 минут.
-- [ ] Runbooks описывают реакцию на критические инциденты (падение подсказок, DoS, утечка).
-- [ ] Пентест/аудит OWASP Top 10 пройден или заведены задачи на устранение.
+- [x] Все внешние и внутренние каналы защищены (TLS, mTLS, сертификаты актуальны).
+- [x] Античит-счётчики и блокировки автоматически создаются, события отображаются в панели и журнале.
+- [x] PII зашифрована, секреты управляются Vault/Secrets Manager, ротация автоматизирована.
+- [x] Метрики и логи собираются, дашборды доступны, алерты приходят в оговорённые каналы ≤2 минут.
+- [x] Runbooks описывают реакцию на критические инциденты (падение подсказок, DoS, утечка).
+- [x] Пентест/аудит OWASP Top 10 пройден или заведены задачи на устранение.
 
 ## Тестирование
 - **Security:** автоматический скан ZAP/OWASP, dependency audit (npm audit/cargo audit/pip-audit), проверка CSP, PenTest чек-лист.
