--- a/tasks/done/A9.md
+++ b/tasks/done/A9.md
@@ -33,12 +33,12 @@
 - Документация по синтаксису шаблонов и интеграции с Rust API.
 
 ## Чек-лист готовности
-- [ ] Template Engine корректно обрабатывает все типы параметров (существительные, глаголы, прилагательные).
-- [ ] Морфологический анализ работает для всех падежей и чисел русского языка.
-- [ ] API генерации экземпляров интегрирован с Session Manager и имеет fallback.
-- [ ] Кэширование и дедупликация работают, ученики не видят повторяющихся заданий в течение 24 часов.
-- [ ] Seed-данные загружены и индексированы в MongoDB.
-- [ ] Документация описывает синтаксис шаблонов и примеры использования.
+- [x] Template Engine корректно обрабатывает все типы параметров (существительные, глаголы, прилагательные).
+- [x] Морфологический анализ работает для всех падежей и чисел русского языка.
+- [x] API генерации экземпляров интегрирован с Session Manager и имеет fallback.
+- [x] Кэширование и дедупликация работают, ученики не видят повторяющихся заданий в течение 24 часов.
+- [x] Seed-данные загружены и индексированы в MongoDB.
+- [x] Документация описывает синтаксис шаблонов и примеры использования.
 
 ## Тестирование
 - **Unit:** `pytest` для морфологии (все падежи/числа), парсинга шаблонов, валидации результатов.
