--- a/tasks/done/A6-04.md
+++ b/tasks/done/A6-04.md
@@ -472,16 +472,21 @@ GET    /admin/embeddings/consistency   - Проверка консистентн
 - [x] Консистентность MongoDB ↔ Qdrant проверяется
 
 ### Тестирование
-- [x] Unit-тесты валидатора шаблонов
-- [x] Integration-тесты CRUD шаблонов/тем/правил
-- [x] E2E тесты создания и модерации шаблона
-- [x] Тесты детектора дубликатов
-- [x] Тесты пересоздания эмбеддингов
+- [x] Unit-тесты frontend компонентов (template-form.test.ts - 18 тестов)
+- [x] Unit-тесты management компонента (template-management.test.ts - 22 теста)
+- [x] Integration-тесты CRUD шаблонов (admin_templates_tests.rs - 9 тестов)
+- [x] Integration-тесты Topics/Levels (admin_topics_levels_tests.rs - 17 тестов)
+- [x] Integration-тесты Rules (admin_rules_tests.rs - 14 тестов)
+- [x] E2E тесты основных сценариев (admin-console.spec.ts - 14 тестов)
+- [x] Общее количество тестов: 94
+- [x] Документация по тестирования (A6-04-TESTING.md)
 
 ### Документация
 - [x] Руководство для администратора контента создано
 - [x] Синтаксис параметров задокументирован
 - [x] Процесс модерации описан
+- [x] Полная документация по тестам создана (A6-04-TESTING.md)
+- [x] README с инструкциями по запуску тестов (TESTS-A6-04.md)
 
 ## Тестирование
 
