--- a/tasks/A10.md
+++ b/tasks/A10.md
@@ -38,12 +38,12 @@
 - Seed-данные, документация и мониторинг.
 
 ## Чек-лист готовности
-- [ ] Коллекция `feature_flags` создана с индексами и валидацией.
-- [ ] Rust/Python/PWA проверяют флаги через единый интерфейс с кэшированием.
-- [ ] Admin API позволяет управлять флагами с аудитом и валидацией зависимостей.
-- [ ] Frontend корректно скрывает/показывает функциональность в зависимости от флагов.
-- [ ] Метрики и алерты для изменений флагов интегрированы в мониторинг.
-- [ ] Документация описывает все флаги, их назначение и влияние на систему.
+- [x] Коллекция `feature_flags` создана с индексами и валидацией.
+- [x] Rust/Python/PWA проверяют флаги через единый интерфейс с кэшированием.
+- [x] Admin API позволяет управлять флагами с аудитом и валидацией зависимостей.
+- [x] Frontend корректно скрывает/показывает функциональность в зависимости от флагов.
+- [x] Метрики и алерты для изменений флагов интегрированы в мониторинг.
+- [x] Документация описывает все флаги, их назначение и влияние на систему.
 
 ## Тестирование
 - **Unit:** тесты иерархии флагов (user > group > global), кэширования, graceful degradation.
