--- a/tasks/A7.md
+++ b/tasks/A7.md
@@ -40,7 +40,10 @@
 - [x] PII зашифрована, секреты управляются Vault/Secrets Manager, ротация автоматизирована.
 - [x] Метрики и логи собираются, дашборды доступны, алерты приходят в оговорённые каналы ≤2 минут.
 - [x] Runbooks описывают реакцию на критические инциденты (падение подсказок, DoS, утечка).
-- [x] Пентест/аудит OWASP Top 10 пройден или заведены задачи на устранение.
+- [x] Пентест/аудит OWASP Top 10: OWASP ZAP security scan настроен в CI/CD (.github/workflows/security-scan.yml).
+- [x] Smoke-тесты для Prometheus metrics scraping реализованы (infra/tests/prometheus-smoke-test.sh).
+- [x] DR drills документированы и автоматизированы (docs/devops/disaster-recovery-drills.md, скрипты в infra/tests/dr-drills/).
+- [x] Re-encryption скрипт создан для старых данных после ротации ключей (infra/vault/reencrypt-old-data.sh).
 
 ## Тестирование
 - **Security:** автоматический скан ZAP/OWASP, dependency audit (npm audit/cargo audit/pip-audit), проверка CSP, PenTest чек-лист.
