--- a/tasks/done/A6-02-1.md
+++ b/tasks/done/A6-02-1.md
@@ -1,4 +1,4 @@
-﻿# A6-04-1 — Студент должен пройти курс
+﻿# A6-02-1 — Ученик должен пройти курс
 
 ## Контекст
 Публикация шаблонов (draft → pending_review → ready → published) уже работает, но ученик до сих пор не видит курсы на главной. Страница `student-home.ts` содержит TODO и всегда отдаёт пустой список.
