--- a/tasks/done/A6-02.md
+++ b/tasks/done/A6-02.md
@@ -578,3 +578,13 @@ describe('Scoring logic', () => {
 10. Manual тестирование полного сценария выполнено успешно
 
 После выполнения A6-02 можно переходить к A9 (Генератор заданий), используя проверенный UI для тестирования.
+
+## Дополнительные правки (A6-02-2)
+
+На основе требований `requirements/сценарии/требования.md` (п.4.2.1) и паспорта проекта UI прохождения курса доработан:
+- убраны отладочные формы `ID ученика / ID группы / JWT` из `app-shell.ts`, данные пользователя берутся из `lessonStore.setUser` после логина;
+- `lesson-catalog` и `connection-indicator` отображают чистые русские подписи и реальные данные из стора;
+- `lesson-player` показывает счётчик задания, единый канал уведомлений и блокирует кнопку на время отправки ответа;
+- `lesson-results` появляется только после окончания урока, добавлены кнопки «Повторить» и «Вернуться к темам»;
+- стор отслеживает `sessionProgress`, поэтому в плеере отображается «Задание X из Y», а карточка активного курса сразу доступна в каталоге;
+- сообщения из API (`feedback`, статусы очереди) показываются один раз возле формы, а индикатор связи автоматически очищает статус «Синхронизация…» после завершения.
